--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "description": "Svg to icon",
   "version": "1.0.0",
   "main": "index.js",
-  "dependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,10 +16,11 @@
   ],
   "author": "Jimmie Max",
   "devDependencies": {
-    "fs-extra": "^10.1.0",
-    "svgicons2svgfont": "^12.0.0",
+    "copy-template-dir": "^1.4.0",
     "ejs": "^3.1.8",
+    "fs-extra": "^10.1.0",
     "svg2ttf": "^6.0.3",
+    "svgicons2svgfont": "^12.0.0",
     "ttf2eot": "^3.1.0",
     "ttf2woff": "^3.0.0",
     "ttf2woff2": "^4.0.5"
