--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "svg2icon",
+  "name": "@geektech/svg2icon",
   "description": "Svg to icon",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.0.1",
+  "main": "src/index.js",
+  "bin": {
+    "svg2icon": "bin/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
