chore(vscode): launch

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,12 +19,13 @@
             "type": "node",
             "console": "integratedTerminal",
             "runtimeArgs": [
+                "run",
+                "test"
             ],
-            "runtimeExecutable": "node test",
+            "runtimeExecutable": "npm",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/test.js"
-        },
+        }
     ]
 }
